--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         width: 100px;
         height: 100px;
         background-color: #f00;
-        background-image: conic-gradient(from -63.43deg at center, #0000 0deg 126.86deg, #0004 126.86deg 243.43deg, #0002 243.43deg 360deg);
+        background-image: conic-gradient(from -63.43deg at center, #fff4 0deg 126.86deg, #0004 126.86deg 243.43deg, #0000 243.43deg 360deg);
         left: calc((var(--x) - var(--z)) * 50px);
         top: calc((var(--x) + var(--z)) * 25px - var(--y) * 50px);
         margin-left: -50px;
@@ -296,25 +296,38 @@
           cube.style.setProperty("--z", z);
           cube.color = color;
           cube.style.backgroundColor = color;
+
+          let breakTimeout;
+          let started = false;
+
+          function placeAdjacent(e) {
+            const angle = angleFromPoints(50, 50, e.offsetX, e.offsetY);
+            let newX = 0;
+            let newY = 0;
+            let newZ = 0;
+            if (angle > -2.67785867 && angle < -0.46373398) newY++; //
+            else if (angle > -0.46373398 && angle < 1.5708) newX++; // Unintentionally equal line widths lol
+            else if (angle > 1.5708 || angle < -2.67785867) newZ++; //
+            const rotated = rotCoords(newX, newZ);
+            placeCube(x + rotated.x, y + newY, z + rotated.z);
+          }
+
           cube.addEventListener("pointerdown", (e) => {
-            if (e.button == 0) {
-              const angle = angleFromPoints(50, 50, e.offsetX, e.offsetY);
-              let newX = 0;
-              let newY = 0;
-              let newZ = 0;
-              if (angle > -2.67785867 && angle < -0.46373398) newY++; //
-              else if (angle > -0.46373398 && angle < 1.5708) newX++; // Unintentionally equal line widths lol
-              else if (angle > 1.5708 || angle < -2.67785867) newZ++; //
-              const rotated = rotCoords(newX, newZ);
-              placeCube(x + rotated.x, y + newY, z + rotated.z);
-            } else if (e.button == 2) {
-              breakCube(cube);
-            } else if (e.button == 1) {
-              colorPicker.value = currColor = color;
-              console.log(colorPicker.value);
-              console.log(currColor);
-              console.log(color);
+            if (e.pointerType !== "touch") {
+              if (e.button == 0) placeAdjacent(e);
+              else if (e.button == 2) breakCube(cube);
+              else if (e.button == 1) colorPicker.value = currColor = color;
+            } else if (e.pointerType === "touch") {
+              started = true;
+              breakTimeout = setTimeout(() => {
+                breakCube(cube);
+                started = false;
+              }, 200);
             }
+          });
+          cube.addEventListener("pointerup", (e) => {
+            if (e.pointerType === "touch" && started) placeAdjacent(e);
+            started = false;
           });
           world.appendChild(cube);
           if (addToHistory) addHistory();
@@ -376,7 +389,9 @@
       });
       view.addEventListener("pointerup", (e) => {
         isPanning = false;
-        if (e.button == 0 && e.target === view && (Math.abs(e.clientX - downPos.x) < 10 || Math.abs(e.clientY - downPos.y) < 10)) {
+      });
+      view.addEventListener("click", (e) => {
+        if (e.target === view && (e.clientX - downPos.x === 0 || e.clientY - downPos.y === 0)) {
           const worldPos = worldCoords(e.clientX, e.clientY);
           placeCube(worldPos.x, 0, worldPos.z);
         }
