--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
       let historyIndex = 0;
       let isBreaking = false;
       let isPicking = false;
+      let muted = false;
 
       function getCubes() {
         return document.querySelectorAll(".cube:not(.breaking)");
@@ -208,24 +209,32 @@
 
       function deserialize(string, animate = true, animationLength = 200) {
         clear(false);
+        toggleMuted(true);
         const cubeStrings = string.split(";");
         if (animate) {
           cubeStrings.forEach((c, i) => setTimeout(() => placeCube(...c.split(","), true, false), (animationLength / cubeStrings.length) * i));
-          setTimeout(() => addHistory(), animationLength);
+          setTimeout(() => {
+            addHistory();
+            toggleMuted(false);
+          }, animationLength);
         } else {
           cubeStrings.forEach((c, i) => placeCube(...c.split(","), true, false));
           addHistory();
+          toggleMuted(false);
         }
       }
 
       function clear(addToHistory = true) {
+        toggleMuted(true);
         for (const cube of getCubes()) {
           breakCube(cube, false);
         }
         if (addToHistory) addHistory();
+        toggleMuted(false);
       }
 
       function save() {
+        storeSave();
         const a = document.createElement("a");
         a.setAttribute("href", "data:text/plain;charset=utf-8," + encodeURIComponent(serialize()));
         a.setAttribute("download", "cubes.cubes");
@@ -257,7 +266,7 @@
 
       function addHistory(force = false) {
         const cubes = getCubes();
-        if (force || getHistory() !== cubes) {
+        if (force || getHistory() != cubes) {
           if (historyIndex > 0) {
             history.length -= historyIndex;
             historyIndex = 0;
@@ -310,6 +319,19 @@
         cubes.sort((a, b) => {
           a.style.getPropertyValue("--x") + a.style.getPropertyValue("--y") + a.style.getPropertyValue("--z");
         });
+      }
+
+      function toggleMuted(state) {
+        muted = state ?? !muted;
+        localStorage.setItem("muted", muted);
+      }
+
+      function playSound(sound = "cube.wav") {
+        if (!muted) {
+          const audio = new Audio("./" + sound);
+          audio.play();
+          return audio;
+        } else return false;
       }
 
       function setColor(color) {
@@ -384,6 +406,7 @@
           world.appendChild(cube);
           if (addToHistory) addHistory();
           setTimeout(() => cube.classList.remove("placing"), 100);
+          playSound();
           console.log("Placed a cube at ", x, y, z, " with color ", color);
         }
       }
@@ -395,6 +418,7 @@
           cube.remove();
         }, 150);
         if (addToHistory) addHistory();
+        playSound();
       }
 
       function pan(x, y) {
@@ -466,9 +490,7 @@
       });
 
       view.addEventListener("contextmenu", (e) => e.preventDefault());
-
       rotator.addEventListener("input", (e) => rotate(rotator.value));
-
       colorPicker.addEventListener("input", (e) => {
         currColor = colorPicker.value;
       });
@@ -503,7 +525,7 @@
           e.preventDefault();
           file.click();
         }
-        if (e.code === "Delete" && e.ctrlKey) {
+        if (e.code === "KeyR" && e.ctrlKey) {
           e.preventDefault();
           clear();
         }
@@ -543,9 +565,16 @@
           e.preventDefault();
           zoomView(zoom * 0.75);
         }
+        if (e.code === "KeyM") {
+          e.preventDefault();
+          toggleMuted();
+        }
       });
 
       window.addEventListener("load", () => {
+        rotate(rotation);
+        setColor(currColor);
+        toggleMuted(localStorage.getItem("muted") === "true");
         const lastSave = getStoredSave();
         const urlParameter = new URLSearchParams(window.location.search);
         if (urlParameter.has("c")) deserialize(urlParameter.get("c"));
