I misspelt my own name lol

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="2.5D Colored cube voxel-art editor by Tach-Tac" />
-    <meta name="author" content="Tach-Tac" />
+    <meta name="author" content="Tech-Tac" />
     <meta name="keywords" content="Cubes, 3D, 2.5D, Voxel, Art" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <title>Cubes</title>
