--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="2.5D Colored cube voxel-art editor by Tach-Tac" />
+    <meta name="description" content="2.5D Colored cube voxel-art editor by Tech-Tac" />
     <meta name="author" content="Tech-Tac" />
     <meta name="keywords" content="Cubes, 3D, 2.5D, Voxel, Art" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
