--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
           <button type="button" class="btn-save">Save</button>
           <button type="button" class="btn-load" onclick="file.click()">load<input type="file" hidden id="file" class="load-file" /></button>
         </div>
+        <div class="list"></div>
       </div>
     </div>
     <script>
@@ -468,7 +469,7 @@
         }
       });
       view.addEventListener("pointerup", (e) => {
-        if (isPanning && e.target === view && (e.clientX - downPos.x === 0 || e.clientY - downPos.y === 0)) {
+        if (isPanning && e.target === view && e.button !== 2 && (e.clientX - downPos.x === 0 || e.clientY - downPos.y === 0)) {
           const worldPos = worldCoords(e.clientX, e.clientY);
           placeCube(worldPos.x, 0, worldPos.z);
         }
