oops fixed menu

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <button type="button" class="btn-save">Save</button>
           <button type="button" class="btn-load" onclick="file.click()">load<input type="file" hidden id="file" class="load-file" /></button>
         </div>
-        <div class="list"></div>
+        <!-- <div class="list"></div> -->
       </div>
     </div>
     <script>
